--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,3 +22,339 @@ $font-family-sans-serif-secondary: 'Montserrat', sans-serif;
 @import 'components/site-base';
 @import 'components/site-blocks';
 @import 'components/site-footer';
+
+#colorlib-main-nav {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba($black,.99);
+	z-index: 1002;
+	text-align: center;
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transition: all .8s cubic-bezier(.175, .885, .32, 1.275);
+	-moz-transition: all .8s cubic-bezier(.175, .885, .32, 1.275);
+	-ms-transition: all .8s cubic-bezier(.175, .885, .32, 1.275);
+	-o-transition: all .8s cubic-bezier(.175, .885, .32, 1.275);
+	transition: all .8s cubic-bezier(.175, .885, .32, 1.275);
+	-webkit-transform: scale(0.1);
+	-moz-transform: scale(0.0);
+	-ms-transform: scale(0.0);
+	-o-transform: scale(0.0);
+	transform: scale(0.0);
+	overflow-y: scroll;
+	.colorlib-table{
+		display: table;
+		width: 100%;
+		height: 100%;
+		.img{
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			height: 100%;
+			width: 100%;
+			opacity: 1;
+			&:after{
+				position: absolute;
+				top: 0;
+				left: 0;
+				bottom: 0;
+				right: 0;
+				content: '';
+				background: rgba($black,.3);
+			}
+		}
+		.colorlib-table-cell{
+			display: table-cell;
+			vertical-align: middle;
+		}
+	}
+	.colorlib-nav-toggle {
+		position: absolute;
+		top: 40px;
+		right: 40px;
+		padding: 20px;
+		height: 44px;
+		width: 44px;
+		line-height: 0;
+		padding: 0!important;
+		visibility: hidden;
+		opacity: 0;
+		@include transition(.3s);
+		i {
+			top: 18px!important;
+			left: 0!important;
+			margin: 0!important;
+			padding: 0!important;
+			line-height: 0;
+			text-indent: 0;
+		}
+		&.show {
+			visibility: visible;
+			opacity: 1;
+		}
+		&:hover {
+			// background: rgba(0,0,0,1);
+			i{
+				&::before, &::after {
+			  	   content:'';
+				   width: 40px;
+				   height: 2px;
+				   background: $white;
+				   position: absolute;
+				   left:0;
+				}
+			}
+		}
+	}
+	.menu-show & {
+		visibility: visible;
+		opacity: 1;
+		-webkit-transform: scale(1.0);
+		-moz-transform: scale(1.0);
+		-ms-transform: scale(1.0);
+		-o-transform: scale(1.0);
+		transform: scale(1.0);
+	}
+	.logo{
+		font-size: 40px;
+		color: $white;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		font-weight: 700;
+		position: relative;
+		display: inline-block;
+		margin-bottom: 0;
+		line-height: 1.5;
+		font-family: $font-primary;
+		span{
+			font-size: 14px;
+			display: block;
+			font-weight: 300;
+			color: rgba(255,255,255,.8);
+			letter-spacing: 8px;
+		}
+	} 
+	ul {
+		padding: 0;
+		margin: 0;
+		display: block;
+		@include media-breakpoint-down(sm){
+			padding: 20px 0 0 0;
+		}
+		li {
+			padding: 0;
+			margin: 0;
+			list-style: none;
+			font-weight: 600;
+			font-size: 14px;
+			letter-spacing: 5px;
+			text-transform: uppercase;
+			a {
+				display: block;
+				color: rgba(255,255,255,1);
+				padding: 5px 0;
+				span{
+					color: rgba(255,255,255,1);
+					position: relative;
+					padding: 0 10px;
+					small{
+						position: absolute;
+						bottom: 7px;
+						left: -30px;
+						font-size: 16px;
+						color: rgba(255,255,255,.3);
+						border-bottom: 1px solid rgba(255,255,255,.3);
+					}
+				}
+				&:hover, &:active, &:focus {
+					outline: none;
+					text-decoration: none;
+					span{
+						&:before {
+							visibility: visible;
+							-webkit-transform: scaleX(1);
+							-moz-transform: scaleX(1);
+							-ms-transform: scaleX(1);
+							-o-transform: scaleX(1);
+							transform: scaleX(1);
+						}
+					}
+				}
+			}	
+			&.active{
+				a{
+					span{
+						color: #f8b500;
+						&:before {
+							background: $primary;
+							visibility: visible;
+							-webkit-transform: scaleX(1);
+							-moz-transform: scaleX(1);
+							-ms-transform: scaleX(1);
+							-o-transform: scaleX(1);
+							transform: scaleX(1);
+						}
+					}
+				}
+			}
+		}
+		
+	}
+}
+
+///////////////
+
+	.colorlib-navbar-brand{
+		float: left;
+		.colorlib-logo{
+			font-size: 12px;
+			color: $white;
+			letter-spacing: 5px;
+			font-weight: 600;
+			position: relative;
+			display: inline-block;
+			margin-bottom: 0;
+			line-height: 1.5;
+			font-family: $font-primary;
+			text-transform: uppercase;
+			span{
+				font-size: 11px;
+				display: block;
+				font-weight: 300;
+				color: rgba(255,255,255,.8);
+				letter-spacing: 7px;
+			}
+			i{
+				color: $primary;
+				position: absolute;
+				top: -18px;
+				bottom: 0;
+				left: 7px;
+				font-size: 48px;
+			}
+			&:hover{
+				text-decoration: none !important;
+			}
+			&:active, &:focus {
+				outline: none;
+				text-decoration: none;
+			}
+		}
+	}
+
+
+///////////////
+.colorlib-nav-toggle {
+   cursor: pointer;
+   text-decoration: none;
+   &.active i {
+		&::before, &::after {
+			background: $black;
+		}
+  }
+  &.dark {
+  	&.active i {
+			&::before, &::after {
+				background: $black;
+			}
+	  }
+  }
+  &:hover, &:focus, &:active {
+  	outline: none;
+  	border-bottom: none!important;
+  }
+  i {
+  	position: relative;
+	  display: inline-block;
+	  width: 20px;
+	  height: 2px;
+	  color: $black;
+	  font:bold 14px/.4 Helvetica;
+	  text-transform: uppercase;
+	  text-indent:-55px;
+	  background: $white;
+	  transition: all .2s ease-out;
+	  .menu-show & {
+			background: $white;
+			color: $white;
+		}
+		&::before, &::after {
+	  	   content:'';
+		   width: 30px;
+		   height: 2px;
+		   background: $white;
+		   position: absolute;
+		   left:0;
+		   .menu-show & {
+				background: $white;
+		   }
+		   @include transition(.2s);
+	  }
+  }
+  &.dark {
+  	i {
+	  	position: relative;
+			color: $white;
+			background: $white;
+			transition: all .2s ease-out;
+			&::before, &::after {
+			   background: $white;
+			   @include transition(.2s);
+		  }
+	  }
+  }
+}
+
+.colorlib-nav-toggle i::before {
+  top: -7px;
+}
+.colorlib-nav-toggle i::after {
+  bottom: -7px;
+}
+.colorlib-nav-toggle:hover i::before {
+  top: -10px;
+}
+.colorlib-nav-toggle:hover i::after {
+  bottom: -10px;
+}
+.colorlib-nav-toggle.active i {
+	background: transparent;
+}
+.colorlib-nav-toggle.active i::before {
+  top:0;
+  -webkit-transform: rotateZ(45deg);
+     -moz-transform: rotateZ(45deg);
+      -ms-transform: rotateZ(45deg);
+       -o-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+}
+.colorlib-nav-toggle.active i::after {
+  bottom:0;
+  -webkit-transform: rotateZ(-45deg);
+     -moz-transform: rotateZ(-45deg);
+      -ms-transform: rotateZ(-45deg);
+       -o-transform: rotateZ(-45deg);
+          transform: rotateZ(-45deg);
+}
+.colorlib-nav-toggle {
+	float: right;
+	z-index: 1003;
+	position: relative;
+	top: 0;
+	right: 0;
+	display: block;
+	margin: 0 auto;
+	cursor: pointer;
+	margin-top: 0;
+	@include media-breakpoint-down(sm){
+		right: 10px;
+	}
+}
+
+
