--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 :root {
-  --bs-blue: #0d6efd;
+  --bs-blue: #163E58;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
@@ -13,7 +13,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #fc5404;
+  --bs-primary: #163E58;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -163,7 +163,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #fc5404;
+  color: #163E58;
   text-decoration: underline; }
   a:hover {
     color: #ca4303; }
@@ -2020,15 +2020,15 @@ textarea.form-control-lg {
     -webkit-box-shadow: 0 0 0 0.25rem rgba(252, 84, 4, 0.25);
     box-shadow: 0 0 0 0.25rem rgba(252, 84, 4, 0.25); }
   .form-check-input:checked {
-    background-color: #fc5404;
-    border-color: #fc5404; }
+    background-color: #163E58;
+    border-color: #163E58; }
     .form-check-input:checked[type="checkbox"] {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e"); }
     .form-check-input:checked[type="radio"] {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e"); }
   .form-check-input[type="checkbox"]:indeterminate {
-    background-color: #fc5404;
-    border-color: #fc5404;
+    background-color: #163E58;
+    border-color: #163E58;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e"); }
   .form-check-input:disabled {
     pointer-events: none;
@@ -2087,7 +2087,7 @@ textarea.form-control-lg {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #fc5404;
+    background-color: #163E58;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2115,7 +2115,7 @@ textarea.form-control-lg {
   .form-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #fc5404;
+    background-color: #163E58;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2457,8 +2457,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #000;
-  background-color: #fc5404;
-  border-color: #fc5404; }
+  background-color: #163E58;
+  border-color: #163E58; }
   .btn-primary:hover {
     color: #000;
     background-color: #fc6e2a;
@@ -2482,8 +2482,8 @@ textarea.form-control-lg {
       box-shadow: 0 0 0 0.25rem rgba(214, 71, 3, 0.5); }
   .btn-primary:disabled, .btn-primary.disabled {
     color: #000;
-    background-color: #fc5404;
-    border-color: #fc5404; }
+    background-color: #163E58;
+    border-color: #163E58; }
 
 .btn-secondary {
   color: #fff;
@@ -2696,26 +2696,26 @@ textarea.form-control-lg {
     border-color: #212529; }
 
 .btn-outline-primary {
-  color: #fc5404;
-  border-color: #fc5404; }
+  color: #163E58;
+  border-color: #163E58; }
   .btn-outline-primary:hover {
     color: #000;
-    background-color: #fc5404;
-    border-color: #fc5404; }
+    background-color: #163E58;
+    border-color: #163E58; }
   .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
     -webkit-box-shadow: 0 0 0 0.25rem rgba(252, 84, 4, 0.5);
     box-shadow: 0 0 0 0.25rem rgba(252, 84, 4, 0.5); }
   .btn-check:checked + .btn-outline-primary,
   .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
     color: #000;
-    background-color: #fc5404;
-    border-color: #fc5404; }
+    background-color: #163E58;
+    border-color: #163E58; }
     .btn-check:checked + .btn-outline-primary:focus,
     .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
       -webkit-box-shadow: 0 0 0 0.25rem rgba(252, 84, 4, 0.5);
       box-shadow: 0 0 0 0.25rem rgba(252, 84, 4, 0.5); }
   .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-    color: #fc5404;
+    color: #163E58;
     background-color: transparent; }
 
 .btn-outline-secondary {
@@ -2881,7 +2881,7 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #fc5404;
+  color: #163E58;
   text-decoration: underline; }
   .btn-link:hover {
     color: #ca4303; }
@@ -3122,7 +3122,7 @@ textarea.form-control-lg {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #fc5404; }
+    background-color: #163E58; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -3155,7 +3155,7 @@ textarea.form-control-lg {
       background-color: rgba(255, 255, 255, 0.15); }
     .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
       color: #fff;
-      background-color: #fc5404; }
+      background-color: #163E58; }
     .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
       color: #adb5bd; }
   .dropdown-menu-dark .dropdown-divider {
@@ -4065,7 +4065,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #fc5404;
+  color: #163E58;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4098,8 +4098,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #fc5404;
-  border-color: #fc5404; }
+  background-color: #163E58;
+  border-color: #163E58; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4271,7 +4271,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #fc5404;
+  background-color: #163E58;
   -webkit-transition: width 0.6s ease;
   -o-transition: width 0.6s ease;
   transition: width 0.6s ease; }
@@ -4340,8 +4340,8 @@ textarea.form-control-lg {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #fc5404;
-    border-color: #fc5404; }
+    background-color: #163E58;
+    border-color: #163E58; }
   .list-group-item + .list-group-item {
     border-top-width: 0; }
     .list-group-item + .list-group-item.active {
@@ -5407,7 +5407,7 @@ textarea.form-control-lg {
   content: ""; }
 
 .link-primary {
-  color: #fc5404; }
+  color: #163E58; }
   .link-primary:hover, .link-primary:focus {
     color: #fd7636; }
 
@@ -5742,7 +5742,7 @@ textarea.form-control-lg {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #fc5404 !important; }
+  border-color: #163E58 !important; }
 
 .border-secondary {
   border-color: #6c757d !important; }
@@ -6413,7 +6413,7 @@ textarea.form-control-lg {
   text-align: center !important; }
 
 .text-primary {
-  color: #fc5404 !important; }
+  color: #163E58 !important; }
 
 .text-secondary {
   color: #6c757d !important; }
@@ -6467,7 +6467,7 @@ textarea.form-control-lg {
   line-height: 2 !important; }
 
 .bg-primary {
-  background-color: #fc5404 !important; }
+  background-color: #163E58 !important; }
 
 .bg-secondary {
   background-color: #6c757d !important; }
@@ -8798,8 +8798,8 @@ textarea.form-control-lg {
         border-radius: 30px; }
         .site-nav .site-navigation .site-menu > li.cta-button a:hover {
           color: #000;
-          background: #fc5404;
-          border-color: #fc5404; }
+          background: #163E58;
+          border-color: #163E58; }
       .site-nav .site-navigation .site-menu > li.active > a {
         color: #fff; }
     .site-nav .site-navigation .site-menu .has-children {
@@ -8870,7 +8870,7 @@ textarea.form-control-lg {
             padding: 5px 20px;
             display: block; }
             .site-nav .site-navigation .site-menu .has-children .dropdown > li > a:hover {
-              color: #fc5404; }
+              color: #163E58; }
           .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children > a:before {
             content: "\e315";
             right: 20px; }
@@ -8878,9 +8878,9 @@ textarea.form-control-lg {
             left: 100%;
             top: 0; }
             .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children > .dropdown li a:hover, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children > ul li a:hover {
-              color: #fc5404; }
+              color: #163E58; }
           .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:hover > a, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:active > a, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:focus > a {
-            color: #fc5404; }
+            color: #163E58; }
       .site-nav .site-navigation .site-menu .has-children:hover > a, .site-nav .site-navigation .site-menu .has-children:focus > a, .site-nav .site-navigation .site-menu .has-children:active > a {
         color: #fff; }
       .site-nav .site-navigation .site-menu .has-children:hover, .site-nav .site-navigation .site-menu .has-children:focus, .site-nav .site-navigation .site-menu .has-children:active {
@@ -8989,12 +8989,12 @@ textarea.form-control-lg {
       position: relative;
       color: #000; }
       .site-mobile-menu .site-nav-wrap a:hover {
-        color: #fc5404; }
+        color: #163E58; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li.active > a {
-        color: #fc5404; }
+        color: #163E58; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -9081,9 +9081,9 @@ textarea.form-control-lg {
     .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a {
       color: #000 !important; }
       .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover, .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active {
-        color: #fc5404 !important; }
+        color: #163E58 !important; }
     .sticky-wrapper.is-sticky .site-navbar .site-menu > li.active a {
-      color: #fc5404 !important; }
+      color: #163E58 !important; }
   .sticky-wrapper .shrink {
     padding-top: 0px !important;
     padding-bottom: 0px !important; }
@@ -9362,7 +9362,7 @@ a {
   padding-left: 0;
   padding-right: 0;
   font-weight: bold;
-  color: #fc5404; }
+  color: #163E58; }
   .accordion-1 .accordion-item button:after {
     -webkit-filter: brightness(0.5) sepia(1) hue-rotate(29deg) saturate(6);
     filter: brightness(0.5) sepia(1) hue-rotate(29deg) saturate(6); }
@@ -9396,26 +9396,26 @@ a {
     width: 20px;
     height: 20px;
     background: transparent;
-    color: #fc5404;
+    color: #163E58;
     line-height: 1.6;
     text-align: center;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease; }
   .more-2:hover {
-    color: #fc5404; }
+    color: #163E58; }
     .more-2:hover span {
-      background: #fc5404;
+      background: #163E58;
       color: #fff; }
   .more-2.dark {
     color: #000; }
     .more-2.dark > span {
       color: #000; }
     .more-2.dark:hover {
-      color: #fc5404; }
+      color: #163E58; }
       .more-2.dark:hover span {
         color: #fff;
-        background: #fc5404; }
+        background: #163E58; }
 
 .sec-4 .heading, .sec-5 .heading, .sec-news .heading {
   margin-bottom: 70px;
@@ -9517,7 +9517,7 @@ a {
         -o-transition: .3s all ease;
         transition: .3s all ease; }
       .testimonial-slide-center-wrap .tns-nav button.tns-nav-active:before {
-        background-color: #fc5404; }
+        background-color: #163E58; }
 
 .custom-card .img {
   -webkit-box-flex: 0;
@@ -9526,7 +9526,7 @@ a {
   margin-right: 30px; }
   .custom-card .img [class^="flaticon-"] {
     font-size: 50px;
-    color: #fc5404; }
+    color: #163E58; }
 
 .video-wrap {
   position: relative;
@@ -9571,7 +9571,7 @@ a {
     .post-entry-1 .post-entry-1-contents h2 a, .post-entry-1 .post-entry-1-contents .h2 a {
       color: #000; }
       .post-entry-1 .post-entry-1-contents h2 a:hover, .post-entry-1 .post-entry-1-contents .h2 a:hover {
-        color: #fc5404; }
+        color: #163E58; }
 
 .post-entry-1.person-1 {
   text-align: center; }
@@ -9699,10 +9699,10 @@ a {
   font-weight: 700;
   border-radius: 50%;
   background: rgba(252, 84, 4, 0.1);
-  color: #fc5404;
+  color: #163E58;
   text-align: center; }
   .custom-pagination a:hover, .custom-pagination a.active {
-    background: #fc5404;
+    background: #163E58;
     color: #fff; }
 
 .sidebar-box {
@@ -9915,6 +9915,7 @@ a {
 .site-footer {
   padding-top: 70px;
   padding-bottom: 30px;
+  margin-bottom:-100px;
   font-size: 14px; }
   @media (max-width: 767.98px) {
     .site-footer {
@@ -9922,7 +9923,7 @@ a {
   .site-footer a {
     color: #000; }
     .site-footer a:hover {
-      color: #fc5404; }
+      color: #163E58; }
   .site-footer .widget {
     margin-bottom: 30px; }
     .site-footer .widget h3, .site-footer .widget .h3 {
@@ -9948,7 +9949,7 @@ a {
           -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%); }
         .site-footer .widget .social li a:hover {
-          background-color: #fc5404;
+          background-color: #163E58;
           color: #fff; }
     .site-footer .widget .links li {
       display: block;
@@ -9956,7 +9957,7 @@ a {
       .site-footer .widget .links li a {
         color: #000; }
         .site-footer .widget .links li a:hover {
-          color: #fc5404; }
+          color: #163E58; }
   .site-footer .copyright {
     position: relative;
     padding-top: 40px;
@@ -10347,7 +10348,7 @@ a {
 }
 
 .galery {
-  background-color: #000;
+  background-color: #163E58;
 }
 
 .galery h2{
@@ -10362,3 +10363,9 @@ a {
   background-color: #fff;
   color: #111;
 }
+
+.galery .btn:hover{
+  background-color: #163E58;
+  color: #fff;
+}
+
