--- a/css/style.css
+++ b/css/style.css
@@ -9450,7 +9450,7 @@ a {
   .testimonial-item blockquote {
     font-size: 18px;
     font-style: italic;
-    color: #777;
+    color: #fff;
     margin-bottom: 30px; }
   .testimonial-item .testimonial-author {
     text-anchor: center; }
