--- a/css/project.css
+++ b/css/project.css
@@ -140,3 +140,35 @@
     position: relative;
   }
 }
+
+.galery #portfolio-flters {
+  padding: 0;
+  margin: 0 auto 25px auto;
+  list-style: none;
+  text-align: center;
+  background: white;
+  border-radius: 50px;
+  padding: 2px 15px;
+  align-items: center;
+  line-height: 0.5;
+}
+.galery #portfolio-flters li {
+  cursor: pointer;
+  display: inline-block;
+  padding: 8px 20px 10px 20px;
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 1;
+  color: #444444;
+  margin: 0 4px 8px 4px;
+  transition: 0.3s;
+  border-radius: 50px;
+  border: 1px solid #fff;
+}
+.galery #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
+  color: #163E58;
+  border-color: #163E58;
+}
+.galery #portfolio-flters li:last-child {
+  margin-right: 0;
+}
