--- a/css/style.css
+++ b/css/style.css
@@ -9927,7 +9927,13 @@ a {
   padding-top: 70px;
   padding-bottom: 30px;
   margin-bottom:-100px;
-  font-size: 14px; }
+  font-size: 14px;
+  background-color: #000;
+  color: #fff; }
+
+  .site-footer .widget h3, .site-footer .widget li, .site-footer .widget .links li, .site-footer .widget a, .site-footer .widget p{
+    color: #fff; }
+  
   @media (max-width: 767.98px) {
     .site-footer {
       padding-top: 30px; } }
