--- a/css/style.css
+++ b/css/style.css
@@ -9198,14 +9198,11 @@ a {
   right: 0;
   bottom: 0; }
 
-.loader {
-  z-index: 7700;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%); }
+.loader img {
+  justify-content : center;
+  align-items: center;
+  width: 100%;
+}
 
 .hero-2 {
   background-size: cover;
@@ -10385,4 +10382,31 @@ a {
   background-color: #163E58;
   color: #fff;
 }
+
+.preloader {
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  background: #06274E;
+}
+
+.preloader:active {
+   opacity: 0;
+}
+
+.preloader .preloader-logo {
+   position: absolute;
+   left: 45%;
+   top: 40%;
+   transform: translate(-50%, -50%);
+}
+
+.preloader .preloader-logo img{
+  display: inline-block;
+  z-index: 2;
+  position: absolute;
+}
+
 
