--- a/css/project.css
+++ b/css/project.css
@@ -169,7 +169,7 @@
 }
 
 .galery {
-  height: auto;
+  height: 100% !important;
 }
 
 .galery #portfolio-flters {
@@ -233,6 +233,7 @@
   width: calc(33% - 20px);
   display: inline-block;
 }
+
 
 .infos {
   background-color: rgb(248, 248, 248);
@@ -326,6 +327,11 @@
   bottom: 0;
   z-index: 1;
   font-size: 25px;
+  
+}
+
+.infos .team-page .slick-arrow:after {
+  border: none;
 }
 
 .infos .team-page .slick-arrow.slick-disabled {
@@ -334,8 +340,14 @@
 
 .infos .team-page .prevArrow {
   left: 10px;
+  top: 50px;
 }
 
 .infos .team-page .nextArrow {
   right: 10px;
+  top: 50px;
+}
+
+.infos .team-page .nextArrow:after:active {
+  border: none;
 }
