--- a/css/project.css
+++ b/css/project.css
@@ -242,7 +242,6 @@
   background-position: center center;
   padding: 120px 0px;
   margin-top: 120px;
-  margin-bottom: 240px;
 }
 
 
@@ -253,6 +252,7 @@
   box-shadow: 5px 20px 50px rgba(17, 17, 17, 0.13);
   width: 1050px;
   margin-left: 120px;
+  margin-bottom: 100px;
 }
 
 .infos .main-content .left-image {
@@ -298,10 +298,10 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #f8f9fa;
+  background: var(--bs-primary);
   display: inline-block;
   position: relative;
-  color: black; 
+  color: #fff; 
 }
 
 .infos .main-content .widget ul li a span{
@@ -350,4 +350,262 @@
 
 .infos .team-page .nextArrow:after:active {
   border: none;
+}
+
+.timeline-with-icons {
+  border-left: 1px solid hsl(0, 0%, 90%);
+  position: relative;
+  list-style: none;
+}
+
+.timeline-with-icons .timeline-item {
+  position: relative;
+}
+
+.timeline-with-icons .timeline-item:after {
+  position: absolute;
+  display: block;
+  top: 0;
+}
+
+.timeline-with-icons .timeline-icon {
+  position: absolute;
+  left: -48px;
+  background-color: var(--bs-primary);
+  color: hsl(217, 88.8%, 35.1%);
+  border-radius: 50%;
+  height: 31px;
+  width: 31px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.timeline-carousel {
+  margin: 0;
+  background-color: var(--bs-primary);
+  font-weight: 400;
+  position: relative;
+  overflow: hidden;
+  height: 120vh;
+}
+.timeline-carousel:after, .timeline-carousel:before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 0;
+  height: 100%;
+  background-color: var(--bs-primary);
+  z-index: 3;
+  width: 8%;
+}
+.timeline-carousel:after {
+  left: 0;
+}
+.timeline-carousel:before {
+  right: 0;
+  opacity: 0;
+}
+.timeline-carousel .slick-list {
+  overflow: visible;
+}
+.timeline-carousel .slick-dots {
+  bottom: -73px;
+}
+.timeline-carousel h1 {
+  color: rgba(255, 255, 255, 1);
+  font-weight: 700;
+}
+.timeline-carousel p {
+  color: rgba(255, 255, 255, 1);
+  font-weight: 300;
+}
+
+.timeline-carousel__item-wrapper{
+  padding-left: 150px;
+}
+
+.timeline-carousel__image {
+  padding-right: 30px;
+}
+.timeline-carousel__item {
+  cursor: grab;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+}
+
+.timeline-carousel__item:last-child .timeline-carousel__item-inner:after {
+  width: calc(100% - 30px);
+}
+.timeline-carousel__item-inner {
+  position: relative;
+  padding-top: 45px;
+}
+.timeline-carousel__item-inner:after {
+  position: absolute;
+  width: 100%;
+  top: 45px;
+  left: 0;
+  content: "";
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+.timeline-carousel__item-inner .year {
+  font-size: 36px;
+  line-height: 36px;
+  color: var(--bs-primary);
+  display: table;
+  font-weight: bold;
+  letter-spacing: 1px;
+  background-color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  z-index: 1;
+  position: relative;
+  margin: -15px 0 20px;
+  font-weight: 700;
+}
+.timeline-carousel__item-inner .year:after {
+  content: "";
+  position: absolute;
+  display: block;
+  left: -10px;
+  top: 0;
+  height: 100%;
+  width: 10px;
+  z-index: 3;
+}
+.timeline-carousel__item-inner .month {
+  font-family: "Libre Franklin", sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #ffc107;
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 600;
+}
+.timeline-carousel__item-inner p {
+  font-size: 12px;
+  line-height: 18px;
+  color: rgba(255, 255, 255, 1);
+  width: 60%;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+.timeline-carousel__item-inner .pointer {
+  height: 29px;
+  position: relative;
+  z-index: 1;
+  margin: -4px 0 16px;
+}
+.timeline-carousel__item-inner .pointer:after, .timeline-carousel__item-inner .pointer:before {
+  position: absolute;
+  content: "";
+}
+.timeline-carousel__item-inner .pointer:after {
+  width: 9px;
+  height: 9px;
+  border-radius: 100%;
+  top: 0;
+  left: 0;
+  background-color: #ffc107;
+}
+.timeline-carousel__item-inner .pointer:before {
+  width: 1px;
+  height: 100%;
+  top: 0;
+  left: 4px;
+  background-color: #ffc107;
+}
+.timeline-carousel .slick-active .media-wrapper {
+  opacity: 1 !important;
+}
+.slick-dots {
+  bottom: 160px;
+  list-style: none;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  text-align: center;
+  z-index: 2;
+}
+.slick-dots li {
+  cursor: grab;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+  display: inline-block;
+  margin: 0 6px;
+  position: relative;
+  width: 10px;
+  height: 10px;
+}
+.slick-dots li:last-child {
+  margin-right: 0;
+}
+.slick-dots li.slick-active button {
+  background: #ffc107;
+  border-color: #ffc107;
+}
+.slick-dots li button {
+  display: block;
+  font-size: 0;
+  width: 10px;
+  height: 10px;
+  padding: 0;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-color: rgba(255, 255, 255, 0.6);
+  cursor: pointer;
+  -webkit-transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+  -o-transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+  transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+}
+.slick-dots li button:hover {
+  background: #fff;
+  border-color: #fff;
+}
+.link {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 20px;
+  z-index: 9999;
+}
+.link a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+}
+.link .fa {
+  font-size: 28px;
+  margin-right: 8px;
+  color: #fff;
+}
+.slick-prev svg, .slick-next svg {
+  height: auto;
+  width: 18px;
+  padding-bottom: 2px;
+}
+.slick-prev .btn, .slick-next .btn {
+  border-radius: 0;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.slick-prev, .slick-next {
+  position: absolute;  
+  z-index: 9;
+  border-radius: 0;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.slick-prev {
+  left: 80px;
+  bottom: -80px;
+}
+.slick-next {
+  right: 80px;
+  bottom: -80px;
 }
