--- a/css/style.css
+++ b/css/style.css
@@ -9445,9 +9445,9 @@ a {
     font-weight: 700;
     margin-bottom: 30px; }
   .testimonial-item blockquote {
-    font-size: 18px;
+    font-size: 16px;
     font-style: italic;
-    color: #fff;
+    color: rgb(241, 240, 240);
     margin-bottom: 30px; }
   .testimonial-item .testimonial-author {
     text-anchor: center; }
@@ -9923,9 +9923,10 @@ a {
 .site-footer {
   height: 80vh;
   padding-top: 120px;
-  padding-bottom: 30px;
+  padding-bottom: 100px;
   margin-bottom:-100px;
   font-size: 14px;
+  height: 100%;
   background-color: var(--bs-primary);
   color: #fff; }
 
@@ -9975,8 +9976,10 @@ a {
           color: #163E58; }
   .site-footer .copyright {
     position: relative;
+    background-color: var(--bs-primary);
     padding-top: 40px;
-    margin-top: 40px;}
+    margin-top: 40px;
+    width: 100%;}
     
     .site-footer .copyright:before {
       top: 0;
