--- a/css/style.css
+++ b/css/style.css
@@ -9997,7 +9997,7 @@ a {
 
 .client {
   background-color: rgb(255, 255, 255);
-  height: auto;
+  height: 100px;
   width: cover;
 
 }
@@ -10343,7 +10343,7 @@ a {
   width: 3rem;
   color: #fff;
   border-radius: 100rem;
-  background-color:var(--bs-primary);
+  background-color: #111;
   transition: .3s ease-in-out;
 }
 
