--- a/css/project.css
+++ b/css/project.css
@@ -635,3 +635,256 @@
   background-size:cover;
   height: 100vh;
 }
+
+
+.site-btn {
+	display: inline-block;
+	font-size: 16px;
+	padding: 17px 25px;
+	min-width: 170px;
+	color: #fff;
+	background: #111;
+	line-height: 1;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	text-align: center;
+	font-weight: 500;
+	border: none;
+	border-radius: 2px;
+}
+
+.site-btn i {
+	font-size: 24px;
+	position: relative;
+	top: 5px;
+	margin-left: 4px;
+}
+
+.site-btn:hover {
+	color: #fff;
+}
+
+
+.menu-wrapper {
+	position: fixed;
+	width: 90px;
+	height: 100%;
+	right: 0;
+	top: 0;
+  background-color: #000000;
+	-webkit-box-shadow: 14px 0px 103px rgba(0, 0, 0, 0.08);
+	box-shadow: 14px 0px 103px rgba(0, 0, 0, 0.08);
+	z-index: 999;
+	-webkit-transition: 0.4s;
+	-o-transition: 0.4s;
+	transition: 0.4s;
+}
+
+@media (max-width: 420px) {
+	.menu-wrapper {
+		width: 60px;
+	}
+}
+
+.menu-wrapper.hide-left {
+	opacity: 0;
+	right: -90px;
+}
+
+.menu-switch {
+	width: 100%;
+	height: 90px;
+	padding-top: 23px;
+	font-size: 30px;
+	text-align: center;
+	color: #fff;
+	background: #0f0f0f;
+	cursor: pointer;
+}
+
+.menu-social-warp {
+	height: calc(100% - 90px);
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-moz-justify-content: center;
+	-ms-justify-content: center;
+	-webkit-box-pack: center;
+	justify-content: center;
+	-ms-flex-pack: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+}
+
+.menu-social a {
+	display: block;
+	font-size: 18px;
+	color: #fff;
+	margin-bottom: 50px;
+}
+
+.menu-social a:last-child {
+	margin-bottom: 0;
+}
+
+@media (max-width: 576px) {
+	.menu-social a {
+		margin-bottom: 30px;
+	}
+}
+
+.side-menu-wrapper {
+	position: fixed;
+	width: 270px;
+	height: 100%;
+	right: -280px;
+	top: 0;
+	overflow-y: auto;
+	-webkit-box-shadow: 14px 0px 103px rgba(0, 0, 0, 0.08);
+	box-shadow: 14px 0px 103px rgba(0, 0, 0, 0.08);
+	background-color: #111;
+	z-index: 9999;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	-webkit-transition: 0.3s;
+	-o-transition: 0.3s;
+	transition: 0.3s;
+}
+
+@media (max-width: 420px) {
+	.side-menu-wrapper {
+		width: 100%;
+		left: -100%;
+	}
+}
+
+.side-menu-wrapper.active {
+	right: 0;
+	opacity: 1;
+	filter: alpha(opacity=100);
+}
+
+.side-menu-wrapper .sm-header {
+
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+
+.menu-close {
+	width: 90px;
+	height: 90px;
+	padding-top: 23px;
+	font-size: 30px;
+	text-align: center;
+	color: #fff;
+	background: var(--bs-primary);
+	cursor: pointer;
+}
+
+.site-logo {
+	background: var(--bs-primary);
+	width: calc(100% - 90px);
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-moz-justify-content: center;
+	-ms-justify-content: center;
+	-webkit-box-pack: center;
+	justify-content: center;
+	-ms-flex-pack: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+}
+
+.main-menu {
+	height: calc(100% - 160px);
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-moz-justify-content: center;
+	-ms-justify-content: center;
+	-webkit-box-pack: center;
+	justify-content: center;
+	-ms-flex-pack: center;
+	-moz-align-items: center;
+	-ms-align-items: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+}
+
+.main-menu ul {
+	list-style: none;
+	text-align: center;
+}
+
+.main-menu ul li {
+  color: #fff;
+	display: block;
+	margin-bottom: 20px;
+}
+
+@media (max-height: 500px),
+(max-width: 576px) {
+	.main-menu ul li {
+		margin-bottom: 5px;
+	}
+}
+
+.main-menu ul li a {
+	display: block;
+	font-size: 30px;
+	font-weight: 600;
+	color: #b2b2b2;
+	-webkit-transition: 0.3s;
+	-o-transition: 0.3s;
+	transition: 0.3s;
+}
+
+@media (max-height: 500px),
+(max-width: 576px) {
+	.main-menu ul li a {
+		font-size: 20px;
+	}
+}
+
+.main-menu ul li a:hover,
+.main-menu ul li a.active {
+	color: #2916e0;
+}
+
+.sm-footer {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	padding: 0 15px;
+}
+
+@media (max-height: 500px) {
+	.sm-footer {
+		position: relative;
+		padding-top: 30px;
+	}
+}
+
+.sm-footer .sm-socail a {
+	display: inline-block;
+	font-size: 18px;
+	color: #b2b2b2;
+	margin-right: 30px;
+	margin-bottom: 10px;
+}
+
+.sm-footer .sm-socail a:last-child {
+	margin-right: 0;
+}
+
