--- a/css/project.css
+++ b/css/project.css
@@ -263,6 +263,24 @@
   height: auto;
 }
 
+@media (max-width: 767px) {
+  .infos .main-content .left-image img {
+    width: auto;
+    height: auto;
+    margin-bottom: -20px;
+  }
+  .infos .main-content {
+    width: auto;
+    margin: 0 20px 0 20px;
+    height: auto;
+  }
+  .infos .main-content .section-heading{
+    margin: 0 -30px 0 20px;
+    text-align: justify;
+  }
+}
+
+
 .infos .main-content .section-heading {
   padding: 60px 60px 30px 0px;
 }
@@ -606,7 +624,7 @@
   bottom: -80px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .timeline-carousel__item-wrapper{
     padding-left: 50px;
   }
@@ -758,6 +776,7 @@
 	.side-menu-wrapper {
 		width: 100%;
 		left: -100%;
+    height: 270px;
 	}
 }
 
@@ -840,9 +859,9 @@
 
 .main-menu ul li a {
 	display: block;
-	font-size: 30px;
-	font-weight: 600;
-	color: #b2b2b2;
+	font-size: 18px;
+	font-weight: 300;
+	color: #fff;
 	-webkit-transition: 0.3s;
 	-o-transition: 0.3s;
 	transition: 0.3s;
