--- a/css/project.css
+++ b/css/project.css
@@ -550,7 +550,7 @@
   display: inline-block;
   margin: 0 6px;
   position: relative;
-  border-radius: 50%;
+  border-radius: 100%;
   width: 10px;
   height: 10px;
 }
@@ -558,8 +558,8 @@
   margin-right: 0;
 }
 .slick-dots li.slick-active button {
-  background: #ffc107;
-  border-color: #ffc107;
+  background: white;
+  border-color: white;
 }
 .slick-dots li button {
   display: block;
@@ -567,8 +567,6 @@
   width: 10px;
   height: 10px;
   padding: 0;
-  background-color: rgba(255, 255, 255, 0.6);
-  border-color: rgba(255, 255, 255, 0.6);
   cursor: pointer;
   -webkit-transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
   -o-transition: all 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53);
