--- a/css/style.css
+++ b/css/style.css
@@ -9921,13 +9921,14 @@ a {
     padding: 10px; }
 
 .site-footer {
-  height: 80vh;
+  height: 110vh;
   padding-top: 120px;
   padding-bottom: 100px;
   margin-bottom:-100px;
   font-size: 14px;
   height: 100%;
-  background-color: var(--bs-primary);
+  background: url(../images/Hero/footer.jpg) no-repeat center;
+  background-size: cover;
   color: #fff; }
 
   .site-footer .widget h3, .site-footer .widget li, .site-footer .widget .links li, .site-footer .widget a, .site-footer .widget p{
@@ -9976,7 +9977,6 @@ a {
           color: #163E58; }
   .site-footer .copyright {
     position: relative;
-    background-color: var(--bs-primary);
     padding-top: 40px;
     margin-top: 40px;
     width: 100%;}
@@ -9997,7 +9997,7 @@ a {
 
 .client {
   background-color: rgb(255, 255, 255);
-  height: 100px;
+  height: 300px;
   width: cover;
 
 }
