--- a/css/style.css
+++ b/css/style.css
@@ -9516,6 +9516,18 @@ a {
       .testimonial-slide-center-wrap .tns-nav button.tns-nav-active:before {
         background-color: #163E58; }
 
+.custom-card {
+  background-color: white;
+  border-radius: 10px;
+  padding: 50px 20px;
+  transition: .3s all ease;
+}
+
+.custom-card:hover{
+  box-shadow: 14px 0px 103px rgba(0, 0, 0, 0.096);
+
+}
+
 .custom-card .img {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 50px;
@@ -9921,13 +9933,12 @@ a {
     padding: 10px; }
 
 .site-footer {
-  height: 110vh;
-  padding-top: 120px;
+  height: 100vh;
+  padding-top: 25vh;
   padding-bottom: 100px;
   margin-bottom:-100px;
   font-size: 14px;
-  height: 100%;
-  background: url(../images/Hero/footer.jpg) no-repeat center;
+  background: linear-gradient(to bottom right, rgba(6, 39, 78), rgba(18, 67, 126));
   background-size: cover;
   color: #fff; }
 
