--- a/css/project.css
+++ b/css/project.css
@@ -681,6 +681,10 @@
   color: #fff;
 }
 
+.philosophy .custom-card {
+  background: transparent;
+}
+
 .about2 {
   background: url(../images/Hero/Abouthero2.jpg) no-repeat center;
   background-size:cover;
@@ -964,4 +968,83 @@
   margin: 20px;
   box-shadow: 14px 0px 103px rgba(0, 0, 0, 0.178);
   border-radius: 10px;
+}
+
+/*--------------------------------------------------------------
+# Alt Services Section
+--------------------------------------------------------------*/
+.alt-services {
+  padding-top: 250px;
+  background-color: #F8F8F8;
+  padding-bottom: 200px;
+}
+.alt-services .img-bg {
+  background-size: cover;
+  background-position: center center;
+  height: 800px;
+}
+
+.alt-services h3 {
+  font-size: 40px;
+  font-weight: 700;
+  color: #111;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.alt-services h3:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 3px;
+  background: var(--color-primary);
+  left: 0;
+  bottom: 0;
+}
+
+.alt-services .icon-box {
+  margin-top: 50px;
+}
+
+
+.alt-services .icon-box i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--bs-primary);
+  margin-right: 25px;
+  font-size: 46px;
+  width: 72px;
+  height: 72px;
+  border-radius: 4px;
+  line-height: 0;
+  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.08);
+  background-color: #fff;
+  transition: 0.3s;
+}
+
+.alt-services .icon-box:hover i {
+  background-color: var(--bs-primary);
+  color: #fff;
+}
+
+
+
+.alt-services .icon-box h4 a {
+  color: #000;
+  transition: 0.3s;
+}
+
+.alt-services .icon-box h4 a:hover {
+  color: var(--bs-primary);
+}
+
+.alt-services .icon-box p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+  color: #111;
+  font-family: "Montserrat", sans-serif;
 }
