--- a/css/project.css
+++ b/css/project.css
@@ -176,7 +176,7 @@
   background: var(--primary-);
   padding: 2px 15px;
   align-items: center;
-  height: fit-content;
+  height: auto;
 }
 .galery #portfolio-flters li {
   cursor: pointer;
@@ -1047,4 +1047,58 @@
   margin-bottom: 0;
   color: #111;
   font-family: "Montserrat", sans-serif;
+}
+
+.company-profile {
+  height: 100vh;
+}
+
+.company-profile button{
+  font-size: 16px;
+  padding: 10px 20px 10px 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: var(--bs-primary);
+  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.08);
+}
+
+.company-profile button a{
+  color: #fff;
+}
+
+.company-profile .compro-visual {
+  margin-top: 100px;
+}
+
+.company-profile .compro-visual .image-1 img{
+  position: absolute;
+  width: 40%;
+  left: 41%;
+  margin-top: 0px;
+  z-index: 2;
+  box-shadow: 0px 2px 30px rgba(5, -20, 50, 0.281);
+}
+
+.company-profile .compro-visual .image-2 img{
+  position: absolute;
+  width: 35%;
+  left: 20%;
+  margin-top:80px;
+  z-index: 2;
+  box-shadow: 0px 2px 30px rgba(5, -20, 50, 0.281);
+}
+
+.company-profile .compro-visual .image-3 img{
+ position: absolute;
+  width: 35%;
+  right: -5%;
+  margin-top: 100px;
+  z-index: 1;
+  box-shadow: 0px 2px 30px rgba(5, -20, 50, 0.281);
+}
+
+.sec-contact {
+  background-color: #fff;
+  z-index: 9;
+  position: relative;
 }
