--- a/css/project.css
+++ b/css/project.css
@@ -1050,7 +1050,7 @@
 }
 
 .company-profile {
-  height: 100vh;
+  height: 120vh;
 }
 
 .company-profile button{
@@ -1068,6 +1068,7 @@
 
 .company-profile .compro-visual {
   margin-top: 100px;
+  margin-left: 50px;
 }
 
 .company-profile .compro-visual .image-1 img{
@@ -1076,6 +1077,7 @@
   left: 41%;
   margin-top: 0px;
   z-index: 2;
+  border-radius: 10px;
   box-shadow: 0px 2px 30px rgba(5, -20, 50, 0.281);
 }
 
@@ -1085,6 +1087,7 @@
   left: 20%;
   margin-top:80px;
   z-index: 2;
+  border-radius: 10px;
   box-shadow: 0px 2px 30px rgba(5, -20, 50, 0.281);
 }
 
@@ -1092,9 +1095,38 @@
  position: absolute;
   width: 35%;
   right: -5%;
-  margin-top: 100px;
+  margin-top: 80px;
   z-index: 1;
+  border-radius: 10px;
   box-shadow: 0px 2px 30px rgba(5, -20, 50, 0.281);
+}
+
+@media (max-width: 420px) {
+  .company-profile .compro-visual {
+    margin-left: 0px;
+  }
+  .company-profile .compro-visual .image-1 img{
+    position: absolute;
+    width: 80%;
+    left: 10%;
+  }
+  
+  .company-profile .compro-visual .image-2 img{
+    position: absolute;
+    width: 70%;
+    left: -20%;
+  }
+  
+  .company-profile .compro-visual .image-3 img{
+    position: absolute;
+    width: 70%;
+    right: -20%;
+    top: 3px;
+  }
+
+  .certificate {
+    top: -40px;
+  }
 }
 
 .sec-contact {
