--- a/css/style.css
+++ b/css/style.css
@@ -9393,14 +9393,14 @@ a {
     width: 20px;
     height: 20px;
     background: transparent;
-    color: #163E58;
+    color: #000000;
     line-height: 1.6;
     text-align: center;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease; }
   .more-2:hover {
-    color: #163E58; }
+    color: var(--bs-primary); }
     .more-2:hover span {
       background: #163E58;
       color: #fff; }
@@ -9460,7 +9460,8 @@ a {
       font-weight: 400;
       color: #000; }
     .testimonial-item .testimonial-author span {
-      font-size: 14px; }
+      font-size: 14px; 
+      color: #fff;}
 
 .testimonial-slide-center-wrap {
   position: relative; }
@@ -9527,17 +9528,19 @@ a {
 
 .custom-card:hover{
   box-shadow: 14px 0px 103px rgba(0, 0, 0, 0.096);
-
+  transform: scale(1.1);
 }
 
 .custom-card .img {
   -webkit-box-flex: 0;
   -ms-flex: 0 0 50px;
   flex: 0 0 50px;
-  margin-right: 30px; }
-  .custom-card .img [class^="icon-"] {
-    font-size: 50px;
-    color: #ffffff; }
+  transition: .3s all ease;
+  margin-right: 5px; }
+.custom-card .img [class^="icon-"] {
+  font-size: 50px;
+  color: #ffffff; }
+    
 
 .video-wrap {
   position: relative;
