--- a/css/project.css
+++ b/css/project.css
@@ -437,7 +437,7 @@
   font-weight: 400;
   position: relative;
   overflow: hidden;
-  height: 120vh;
+  height: 80vh;
 }
 .timeline-carousel:after, .timeline-carousel:before {
   content: "";
@@ -1133,4 +1133,238 @@
   background-color: #fff;
   z-index: 9;
   position: relative;
+}
+
+
+/* 
+---------------------------------------------
+contact us
+--------------------------------------------- 
+*/
+
+section.contact-us {
+  margin-top: 0px;
+}
+
+section.contact-us {
+  background-image: url(../img/contact-us.png);
+  height: 120vh;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0px;
+  position: relative;
+  padding-top:100px;
+  margin-bottom:-50px;
+}
+
+section.contact-us:after {
+  position: absolute;
+  content: '';
+  background-image: url(../images/footer-left-dec.png);
+  left: 0px;
+  top: 60px;
+  width: 267px;
+  height: 396px;
+  z-index: 1;
+}
+
+section.contact-us .contact-info {
+  background-color: #fff;
+  margin-top: -30px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.05);
+  border-radius: 15px;
+  z-index: 5;
+  position: relative;
+  padding: 20px;
+  width: 120%;
+  margin-left: -50px;
+}
+
+@media (max-width: 767px) {
+  section.contact-us .contact-info {
+    margin-top: 30px;
+    margin-left: -20px;
+  }
+}
+
+section.contact-us .contact-info .icon i {
+  float: left;
+  margin-right: 15px;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  color: #fff;
+}
+
+section.contact-us .contact-info h4 {
+  font-size: 18px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+section.contact-us .contact-info span {
+  font-size: 15px;
+  color: #E45825;
+  font-weight: 700;
+
+}
+
+section.contact-us .section-heading {
+  text-align: left;
+  margin-bottom: 40px;
+}
+
+section.contact-us #map {
+  margin-top: 100px;
+}
+
+section.contact-us h2 {
+  font-size: 74px;
+  font-weight: 900;
+  color: #fff;  
+}
+
+section.contact-us #contact {
+  margin-left: -100px;
+  position: relative;
+  z-index: 5;
+  background-color: #fff;
+  margin-top: 40px;
+  box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.096);
+  border-radius: 15px;
+  padding: 40px;
+}
+
+@media (max-width: 767px) {
+  section.contact-us #contact {
+    margin-left: 0px;
+   
+  }
+}
+
+section.contact-us #contact input {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  background-color: #f4f7fb;
+  outline: none;
+  border: none;
+  box-shadow: none;
+  font-size: 13px;
+  font-weight: 500;
+  color: #7a7a7a;
+  padding: 0px 15px;
+  margin-bottom: 30px;
+}
+
+section.contact-us #contact textarea {
+  width: 100%;
+  min-height: 140px;
+  max-height: 180px;
+  border-radius: 5px;
+  background-color: #f4f7fb;
+  outline: none;
+  border: none;
+  box-shadow: none;
+  font-size: 14px;
+  font-weight: 400;
+  color: #7a7a7a;
+  padding: 15px;
+  margin-bottom: 30px;
+}
+
+section.contact-us #contact button {
+  float: right;
+  font-size: 13px;
+  color: #fff;
+  background: var(--btn-color);
+  padding: 12px 30px;
+  display: inline-block;
+  border-radius: 5px;
+  font-weight: 400;
+  text-transform: uppercase;
+  transition: all .3s;
+  transition: all .3s;
+  border: none;
+  outline: none;
+}
+
+section.contact-us #contact button:hover {
+  opacity: 0.9;
+}
+
+section.contact-us ul.social-icons li {
+  display: inline-block;
+  margin: 0px 5px;
+}
+
+section.contact-us ul.social-icons {
+  text-align: center;
+  margin-top: 70px;
+}
+
+section.contact-us ul.social-icons li a {
+  width: 44px;
+  height: 44px;
+  display: inline-block;
+  text-align: center;
+  line-height: 44px;
+  background-color: #fff;
+  color: var(--btn-color);
+  border-radius: 50%;
+  transition: all .5s;
+}
+
+section.contact-us ul.social-icons li a:hover {
+  background-color: var(--btn-color);
+  color: #fff;
+}
+
+.contact-us .php-email-form .validate {
+  display: none;
+  color: red;
+  margin: 0 0 15px 0;
+  font-weight: 400;
+  font-size: 13px;
+}
+.contact-us .php-email-form .error-message {
+  display: none;
+  color: #fff;
+  background: #18d26e;
+  text-align: left;
+  padding: 15px;
+  font-weight: 600;
+}
+.contact-us .php-email-form .error-message br + br {
+  margin-top: 25px;
+}
+.contact-us .php-email-form .sent-message {
+  display: none;
+  color: #fff;
+  background: #18d26e;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
+.contact-us .php-email-form .loading {
+  display: none;
+  background: #fff;
+  text-align: center;
+  padding: 15px;
+}
+.contact-us .php-email-form .loading:before {
+  content: "";
+  display: inline-block;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  margin: 0 10px -6px 0;
+  border: 3px solid #18d26e;
+  border-top-color: #eee;
+  -webkit-animation: rotate 1s linear infinite;
+  animation: rotate 1s linear infinite;
 }
