--- a/css/project.css
+++ b/css/project.css
@@ -1220,6 +1220,7 @@ section.contact-us .section-heading {
 
 section.contact-us #map {
   margin-top: 100px;
+  border-radius: 10px;
 }
 
 section.contact-us h2 {
@@ -1281,12 +1282,11 @@ section.contact-us #contact button {
   float: right;
   font-size: 13px;
   color: #fff;
-  background: var(--btn-color);
+  background: var(--bs-primary);
   padding: 12px 30px;
   display: inline-block;
   border-radius: 5px;
   font-weight: 400;
-  text-transform: uppercase;
   transition: all .3s;
   transition: all .3s;
   border: none;
@@ -1367,4 +1367,63 @@ section.contact-us ul.social-icons li a:hover {
   border-top-color: #eee;
   -webkit-animation: rotate 1s linear infinite;
   animation: rotate 1s linear infinite;
+}
+
+.about button {
+  background-color: var(--bs-primary);
+  color: #fff;
+  font-weight: 400;
+  font-size: 16px;
+  border-radius: 5px;
+  width: 150px;
+  height: 50px;
+  margin-top: 20px;
+  transition: .2s ease-in-out;
+  border: none;
+}
+
+.about button:hover {
+  transform: scale(1.05);
+}
+
+
+.about button a{
+  color: #fff;
+ 
+}
+
+.about .right img{
+  position: absolute;
+  top: 880px;
+  right: -50px;
+  z-index: 1;
+  width: 30%;
+  height: auto;
+}
+
+.about .left img{
+  position: absolute;
+  top: 2080px;
+  left: -100px;
+  z-index: -99;
+  width: 30%;
+  height: auto;
+}
+
+.contact-us .right img{
+  position: absolute;
+  bottom: 340px;
+  right: -50px;
+  z-index: -99;
+  width: 30%;
+  height: auto;
+}
+
+.contact-us .left img{
+  position: absolute;
+  bottom: -50px;
+  left: -50px;
+  z-index: -99;
+  width: 40%;
+  height: auto;
 }
