--- a/css/project.css
+++ b/css/project.css
@@ -1396,14 +1396,14 @@ section.contact-us ul.social-icons li a:hover {
   position: absolute;
   top: 880px;
   right: -50px;
-  z-index: 1;
+  z-index: -9;
   width: 30%;
   height: auto;
 }
 
 .about .left img{
   position: absolute;
-  top: 2080px;
+  top: 1880px;
   left: -100px;
   z-index: -99;
   width: 30%;
@@ -1426,4 +1426,207 @@ section.contact-us ul.social-icons li a:hover {
   z-index: -99;
   width: 40%;
   height: auto;
+}
+
+/*** Features ***/
+.feature-row {
+  background: linear-gradient(to bottom right, rgba(6, 39, 78), rgba(18, 67, 126));
+  border-radius: 20px;
+  justify-content: center;
+  box-shadow: 0 0 45px rgba(0, 0, 0, .08);
+}
+
+.feature-item {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-color: rgba(255, 255, 255, 0.03) !important;
+}
+
+.feature-item .box-icon {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  line-height: 64px;
+  background-color: #fff;
+  margin-left: 80px;
+}
+
+@media (max-width: 767px) {
+  .feature-item .box-icon {
+    margin-left: 5px;
+  }
+}
+
+
+.feature-item i{
+  color: var(--bs-primary);
+  font-size: 32px;  
+}
+
+.feature-item h5{
+  font-size: 38px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.feature-item p{
+  font-size: 14px;
+  font-weight: 300;
+  text-align: center;
+  color: #fff;
+}
+
+
+
+/*---------------------------------------
+  NEWS & EVENTS               
+-----------------------------------------*/
+.news{
+ margin-bottom: -120px;
+}
+
+.news,
+.related-news {
+  background: var(--section-bg-color);
+}
+
+.news-thumb {
+  position: relative;
+}
+
+.news .carousel-control.prev a span, .news .carousel-control.prev a span{
+ color: #fff;
+}
+
+.news .carousel-caption h3{
+font-weight: bold;
+font-size: 36px;
+}
+
+.news-category {
+  background: var(--white-color);
+  position: absolute;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  padding: 4px 12px;
+  display: inline-block;
+}
+
+.news-text-info {
+  margin: 0 20px;
+}
+
+.news-title {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.news-title-link {
+  color: var(--title-color);
+  display: inline-block;
+}
+
+.news-title-link:hover {
+  color: var(--dark-color);
+}
+
+.portfolio-image,
+.news-image {
+  display: block;
+  transition: transform 0.6s ease-out;
+}
+
+.news-image-hover {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  transition: all .3s cubic-bezier(.645,.045,.355,1);
+  padding-bottom: 4px;
+  height: 100%;
+}
+
+.news-image-hover::after {
+  content: "";
+  width: 0;
+  height: 4px;
+  bottom: 0;
+  position: absolute;
+  left: auto;
+  right: 0;
+  z-index: -1;
+  transition: width .6s cubic-bezier(.25,.8,.25,1) 0s;
+  background: #198754;
+}
+
+.news-image-hover-warning::after {
+  background: #ffc107;
+}
+
+.news-image-hover-primary::after {
+  background: #0d6efd;
+}
+
+.news-image-hover-success::after {
+  background: #198754;
+}
+
+.news-image-hover:hover::after {
+  width: 100%;
+  left: 0;
+  right: auto;
+  z-index: 9;
+}
+
+.image-popup:hover .portfolio-image,
+.news-image-hover:hover .news-image {
+  transform: scale(1.02);
+}
+
+.news-two-column {
+  min-height: 199px;
+  margin-bottom: 16px;
+}
+
+.news-two-column .news-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.social-share-link,
+.social-share-link + span {
+  color: rgba(255, 255, 255, 0.65);
+}
+
+.news .overlay {
+  background: linear-gradient(to top, #000, transparent 30%);
+  position: absolute;
+  opacity: 50%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.news .blackfilter {
+  background-color: #000;
+  position: absolute;
+  opacity: 50%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.news .carousel-item img{
+  filter: grayscale(1);
+}
+
+.news .carousel-item .btn{
+  background-color: white;
+  color: black;
+  border-radius:5px;
 }
