--- a/css/style.css
+++ b/css/style.css
@@ -9289,7 +9289,9 @@ a {
 
 .sec-1 .img-r {
   position: relative;
-  right: -100px; }
+  right: -150px; 
+  top: -80px;
+width: 80%;}
   @media (max-width: 767.98px) {
     .sec-1 .img-r {
       right: auto !important; } }
